[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/Turret.gd" type="Script" id=1]
[ext_resource path="res://Enemies/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Turret 512x512/Untitled-1_0000s_0002_TURRET.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Turret 512x512/Untitled-1_0000s_0001_TURRET-LIGHTS.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Turret 512x512/Untitled-1_0000s_0000_TURRET-GUN.png" type="Texture" id=5]
[ext_resource path="res://Weapons/HunterGun.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/sfx/Explosion.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 530.209, 24 )

[sub_resource type="CircleShape2D" id=5]
radius = 1224.03

[sub_resource type="Animation" id=6]
resource_name = "New Anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Turret" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 4 )

[node name="Base" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Untitled-10000s0001Turret-Lights" type="Sprite" parent="."]
position = Vector2( -8, 8 )
rotation = 2.95833
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="GunHolder" type="Node2D" parent="."]

[node name="Barrel" type="Sprite" parent="GunHolder"]
rotation = -0.20944
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 5 )
offset = Vector2( -96, 16 )

[node name="HunterGun" parent="GunHolder" instance=ExtResource( 6 )]
position = Vector2( 96, 0 )
cooldown = 2.0

[node name="PlayerScanner" type="Area2D" parent="GunHolder"]
scale = Vector2( -1, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GunHolder/PlayerScanner"]
position = Vector2( -672, 0 )
shape = SubResource( 3 )

[node name="Tracker" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 600, 0 )

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 5 )

[node name="Boom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.6
bus = "Effects"
__meta__ = {
"_editor_description_": ""
}

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 6 )
anims/RESET = SubResource( 7 )

[connection signal="body_entered" from="GunHolder/PlayerScanner" to="." method="_on_PlayerScanner_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_DeathAnimation_animation_finished"]
